--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ documentation = "https://docs.rs/bc-rand"
 
 [dependencies]
 rand = "^0.8.5"
+rand_core = "0.6.4"
 getrandom = "^0.2.9"
 rand_xoshiro = "^0.6.0"
 num-traits = "^0.2.15"
